--- a/TPV/src/main.css
+++ b/TPV/src/main.css
@@ -749,16 +749,16 @@ input[type=file]::file-selector-button:hover {
   z-index: 10;
 }
 
+.order-2 {
+  order: 2;
+}
+
 .order-last {
   order: 9999;
 }
 
 .order-first {
   order: -9999;
-}
-
-.order-2 {
-  order: 2;
 }
 
 .order-1 {
@@ -770,6 +770,11 @@ input[type=file]::file-selector-button:hover {
   margin-bottom: 1rem;
 }
 
+.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
 .my-1 {
   margin-top: 0.25rem;
   margin-bottom: 0.25rem;
@@ -778,11 +783,6 @@ input[type=file]::file-selector-button:hover {
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
-}
-
-.my-2 {
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
 }
 
 .my-28 {
@@ -811,6 +811,10 @@ input[type=file]::file-selector-button:hover {
   margin-right: 0.5rem;
 }
 
+.mb-14 {
+  margin-bottom: 3.5rem;
+}
+
 .mt-6 {
   margin-top: 1.5rem;
 }
@@ -829,10 +833,6 @@ input[type=file]::file-selector-button:hover {
 
 .mb-5 {
   margin-bottom: 1.25rem;
-}
-
-.mb-14 {
-  margin-bottom: 3.5rem;
 }
 
 .mr-3 {
@@ -873,10 +873,6 @@ input[type=file]::file-selector-button:hover {
 
 .mt-1 {
   margin-top: 0.25rem;
-}
-
-.mb-52 {
-  margin-bottom: 13rem;
 }
 
 .block {
@@ -963,6 +959,14 @@ input[type=file]::file-selector-button:hover {
   width: 2rem;
 }
 
+.w-4\/6 {
+  width: 66.666667%;
+}
+
+.w-60 {
+  width: 15rem;
+}
+
 .w-12 {
   width: 3rem;
 }
@@ -983,10 +987,6 @@ input[type=file]::file-selector-button:hover {
   width: 83.333333%;
 }
 
-.w-60 {
-  width: 15rem;
-}
-
 .w-20 {
   width: 5rem;
 }
@@ -1001,10 +1001,6 @@ input[type=file]::file-selector-button:hover {
 
 .w-44 {
   width: 11rem;
-}
-
-.w-4\/6 {
-  width: 66.666667%;
 }
 
 .w-9\/12 {
@@ -1080,12 +1076,12 @@ input[type=file]::file-selector-button:hover {
   grid-template-columns: none;
 }
 
-.grid-rows-1 {
-  grid-template-rows: repeat(1, minmax(0, 1fr));
-}
-
 .grid-rows-5 {
   grid-template-rows: repeat(5, minmax(0, 1fr));
+}
+
+.grid-rows-1 {
+  grid-template-rows: repeat(1, minmax(0, 1fr));
 }
 
 .flex-col {
@@ -1134,6 +1130,10 @@ input[type=file]::file-selector-button:hover {
 
 .gap-4 {
   gap: 1rem;
+}
+
+.gap-28 {
+  gap: 7rem;
 }
 
 .space-y-6 > :not([hidden]) ~ :not([hidden]) {
@@ -1283,6 +1283,11 @@ input[type=file]::file-selector-button:hover {
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
 
+.border-yellow-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(227 160 8 / var(--tw-border-opacity));
+}
+
 .border-slate-900 {
   --tw-border-opacity: 1;
   border-color: rgb(15 23 42 / var(--tw-border-opacity));
@@ -1296,11 +1301,6 @@ input[type=file]::file-selector-button:hover {
 .border-gray-700 {
   --tw-border-opacity: 1;
   border-color: rgb(55 65 81 / var(--tw-border-opacity));
-}
-
-.border-yellow-400 {
-  --tw-border-opacity: 1;
-  border-color: rgb(227 160 8 / var(--tw-border-opacity));
 }
 
 .border-gray-100 {
@@ -1465,11 +1465,6 @@ input[type=file]::file-selector-button:hover {
   padding-right: 0.5rem;
 }
 
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-}
-
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
@@ -1495,9 +1490,18 @@ input[type=file]::file-selector-button:hover {
   padding-right: 1.5rem;
 }
 
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
+}
+
+.pt-10 {
+  padding-top: 2.5rem;
 }
 
 .pt-20 {
@@ -1526,10 +1530,6 @@ input[type=file]::file-selector-button:hover {
 
 .pb-4 {
   padding-bottom: 1rem;
-}
-
-.pt-10 {
-  padding-top: 2.5rem;
 }
 
 .pt-36 {
@@ -1588,6 +1588,11 @@ input[type=file]::file-selector-button:hover {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .font-medium {
@@ -1660,11 +1665,6 @@ input[type=file]::file-selector-button:hover {
   color: rgb(209 213 219 / var(--tw-text-opacity));
 }
 
-.text-blue-600 {
-  --tw-text-opacity: 1;
-  color: rgb(28 100 242 / var(--tw-text-opacity));
-}
-
 .text-gray-900 {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
@@ -1678,6 +1678,17 @@ input[type=file]::file-selector-button:hover {
 .text-gray-100 {
   --tw-text-opacity: 1;
   color: rgb(243 244 246 / var(--tw-text-opacity));
+}
+
+.text-blue-600 {
+  --tw-text-opacity: 1;
+  color: rgb(28 100 242 / var(--tw-text-opacity));
+}
+
+.shadow-2xl {
+  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .shadow-lg {
@@ -1704,10 +1715,9 @@ input[type=file]::file-selector-button:hover {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow-2xl {
-  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
-  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.shadow-yellow-400 {
+  --tw-shadow-color: #E3A008;
+  --tw-shadow: var(--tw-shadow-colored);
 }
 
 .shadow-yellow-500 {
@@ -1717,11 +1727,6 @@ input[type=file]::file-selector-button:hover {
 
 .shadow-slate-900 {
   --tw-shadow-color: #0f172a;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-.shadow-yellow-400 {
-  --tw-shadow-color: #E3A008;
   --tw-shadow: var(--tw-shadow-colored);
 }
 
@@ -2233,6 +2238,10 @@ input[type=file]::file-selector-button:hover {
     width: 3rem;
   }
 
+  .xl\:grid-cols-5 {
+    grid-template-columns: repeat(5, minmax(0, 1fr));
+  }
+
   .xl\:grid-cols-6 {
     grid-template-columns: repeat(6, minmax(0, 1fr));
   }
@@ -2243,10 +2252,6 @@ input[type=file]::file-selector-button:hover {
 
   .xl\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-
-  .xl\:grid-cols-5 {
-    grid-template-columns: repeat(5, minmax(0, 1fr));
   }
 
   .xl\:pl-48 {
